Fixing Contact us people overflow

--- a/css/people.css
+++ b/css/people.css
@@ -22,3 +22,7 @@
 #cards .card .user-content .user-name {
   margin-right: 150px;
 }
+
+.row{
+  overflow-x: hidden;
+}
